# trait-alias-macro

./: Cargo.toml
src/: lib.rs
